# SpotifyUtil

./: .gitignore  README.md  SpotifyUtil.py  __init__.py  config.py  main.py  pyproject.toml  requirements.txt  setup.py
SpotifyUtil/: SpotifyUtil.py  __init__.py  config.py  file_reader.py
