[project]
name = "SpotifyUtil"
version = "0.0.0.5"
authors = [
    { name="Arg0naut18", email="gaming.genos1729@gmail.com" },
]
description = "SpotifyUtils is a very useful library made over Spotipy to automate some rather tiring tasks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = [
    "Spotify",
    "Spotipy",
    "SpotifyUtil",
    "SpotifyUtils"
]
dependencies = ["spotipy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/Arg0naut18/SpotifyUtil"